[build-system]
requires = ["odrive==0.5.4", "fibre", "hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpea_odrive"
version = "1.0.1"
authors = [
  { name="Cesar Plascencia-Zuniga" },
  { name="Lyle Harlow" }
]
description = "DPEA helper tool for running ODrive boards"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/dpengineering/dpea-odrive"
